# brics

./: README.md  pyproject.toml
src/brics/: __init__.py  compiler.py  disassembler.py  exceptions.py  instructions.py  process.py  program.py  relex.py
