[project]
name = "brics"
version = "0.1.0"
description = "A Brainfuck interpreter, disassembler and transpiler."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project.scripts]
brics = "brics:main"

[tool.ruff]
line-length = 100
